# AccMan

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
docs/: Gemfile  README.md  _config.yml  contributing.md  developer-guide.md  faq.md  getting-started.md  index.md  user-guide.md
docs/assets/images/: .gitkeep
docs/assets/images/screenshots/: README.md
src/: .gitignore  app.tsx  i18n.ts  main.tsx  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  vault.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  crypto.rs  defaults.rs  lib.rs  models.rs  storage.rs
src/api/: vault.ts
src/app/: globals.css  page.tsx
src/components/: bulk-create-accounts-modal.tsx  bulk-link-services-modal.tsx  create-account-modal.tsx  create-service-modal.tsx  link-new-services-modal.tsx  link-service-to-account-modal.tsx  linked-service-detail.tsx  sidebar.tsx
src/components/ui/: chart.tsx
src/hooks/: use-idle.ts  use-interval.ts  use-updater.ts
src/locales/en/: translation.json
src/locales/uk/: translation.json
src/pages/: account-view.tsx  accounts.tsx  dashboard.tsx  lock-screen.tsx  service-type-constructor.tsx  service-view.tsx  services-import.tsx  services-library.tsx  settings.tsx  setup.tsx
src/stores/: vault-store.ts
src/types/: index.ts
