[package]
name = "AccMan"
version = "0.1.1"
description = "Easy management for multi-accounting"
authors = ["romirom11"]
license = ""
repository = "https://github.com/romirom11/AccMan"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.7.0", features = [] }
tauri-plugin-log = "2"
ring = "0.17.8"
scrypt = "0.11.0"
rand = "0.8.5"
base64 = "0.22.1"
zeroize = { version = "1.7.0", features = ["zeroize_derive"] }
thiserror = "1.0"
lazy_static = "1.4.0"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
uuid = { version = "1.0", features = ["v4"] }
